[gd_scene load_steps=3 format=3 uid="uid://02wtk3gkbpmn"]

[ext_resource type="Script" path="res://scenes/ui/mutations/mutation_upgrade_card.gd" id="1_cqhwk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_582wi"]
bg_color = Color(0.210497, 0.141483, 0.228516, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MutationUpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(100, 150)
offset_right = 100.0
offset_bottom = 150.0
theme_override_styles/panel = SubResource("StyleBoxFlat_582wi")
script = ExtResource("1_cqhwk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Name"

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 8
text = "Some description"
autowrap_mode = 3
